2005-08-22  Per Bothner  <per@bothner.com>

	* XQParser.java (parseNodeTest): Return ErrorExp if focus is
	undefined, to prevent confusion later, in XQResolveNames.

	* XQParser.java: Fix various places where we only accepted an
	ExprSingle rather than a (comma-separated) Expr.
	(parseStepQualifiers): Use parseExprSequence rather than parseExpr.
	(parseParenExpr): New method.
	(parseTypeSwitch, parseMaybePrimaryExpr, parseIfExpr):
	Use parseParenExpr.
	(parse): Handle DECLARE_BASE_URI_TOKEN - i.e 'declare base-uri'.

2005-08-18  Per Bothner  <per@bothner.com>

	* XQParser.java: Implement 'declare base-uri' statement.
	(vaseURI): New field.
	(parseURILiteral): New method.
	(parse): Use new method for both 'declare base-uri' and for
	'declare default collation' statements.
	* XQResolveNames.java (DOC_BUILTIN, DOC_AVAILABLE_BUILTIN): New values.
	(walkApplyExp): Handle new macros.
	* XQuery.java (initXQuery): Remove declarations for fn:doc and
	deprecated fn:document since now handled by XQResolveNames constructor.

2005-08-16  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (NAMESPACE_URI_BUILTIN, DISTINCT_VALUES_BUILTIN,
	LOCAL_NAME_BUILTIN, ROOT_BUILTIN, COMPARE_BUILTIN): New constants.
	(positionDecl): Remove unneded static field.
	(pushBuiltin): New convenience method.
	(<init>): Push various builtin functions.
	(getCollator, withCollator, withContext): New methods.
	(walkApplyExp): Implement support for various xxx_BUILTIN functions.
	* XQuery.java (initXQuery): Remove declaration for fn:root, since
	it is now handled by XQResolveNames constructor.

	* XQuery.java (initXQuery): Declare prefix-from-QName.

2005-08-03  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (flookup): Change to take single argument.
	(lookup): Merge/inline into walkReferenceExp.
	(walkReferenceExp): Call ClassMethodProc's makeExp rather than make.

	* XQuery.java (instance): Make final.
	(xqEnvironment): New final field.